# genesva-frontend

./: .env.example  .gitignore  DATA_SOURCES.md  README.md  eslint.config.js  package-lock.json  package.json  test-sources.js
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_import.sh
backend/app/: main.py
backend/app/api/v1/: genes.py  router.py
backend/app/core/: config.py  init_db.py
backend/app/models/: gene.py
backend/app/schemas/: gene.py
backend/app/scripts/: import_genes.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_search.py  test_stats.py
src/: App.tsx  ThemeProvider.tsx  main.tsx
src/components/: DataSourceIndicator.css  DataSourceToggle.css  DataSourceToggle.tsx  GeneDetailView.css  GeneDetailView.tsx  GeneTable.tsx  Layouts.tsx
src/components/charts/: BiotypeChart.tsx  ChromosomeChart.tsx
src/config/: dataSource.ts
src/types/: gene.types.ts
src/utils/: apiClient.ts  csvParser.ts  dataLoader.ts
